...
        button.backgroundColor = .systemBackground
        button.tintColor = UIColor.cinnabar
        button.accessibilityIdentifier = "signUpButton"
        return button
    }()
    
    private(set) lazy var logoutButton: UIButton = {
        let button = UIButton(type: .system)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitle("Выйти", for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 18, weight: .regular)
        button.backgroundColor = .systemBackground
        button.tintColor = UIColor.cinnabar
...
        super.init(frame: frame)
        
        self.backgroundColor = .systemBackground
        scrollView.translatesAutoresizingMaskIntoConstraints = false
        captionLabel.adjustsFontForContentSizeCategory = false
        captionLabel.font = UIFontMetrics.default.scaledFont(for: UIFont.captionParangon50)
        accessibilityIdentifier = "SignUpView"
        
        self.addSubview(scrollView)
        self.addSubview(captionLabel)
        scrollView.addSubview(loginTextField)
        scrollView.addSubview(passwordTextField)
        scrollView.addSubview(emailTextField)
...
